3822B1FI2/6_block_gemm_oneapi/khokhlov_andrey/log.txt
/home/crazyproger/sandbox/oneapi-2026/3822B1FI2/6_block_gemm_oneapi/khokhlov_andrey/block_gemm_oneapi.cpp:53:8: error: no member named 'whait' in 'sycl::event'; did you mean 'wait'?
   53 |     }).whait();
      |        ^~~~~
      |        wait
/opt/intel/oneapi/compiler/2025.1/bin/compiler/../../include/sycl/event.hpp:82:8: note: 'wait' declared here
   82 |   void wait();
      |        ^
1 error generated.
